--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.2.1
 colorama==0.4.6
 et_xmlfile==2.0.0
 Flask==3.1.1
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.2
 itsdangerous==2.2.0
@@ -19,4 +20,3 @@ SQLAlchemy==2.0.41
 typing_extensions==4.14.0
 tzdata==2025.2
 Werkzeug==3.1.3
-gunicorn
