--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ Flask==3.1.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.2
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 numpy==2.2.6
 openpyxl==3.1.5
+packaging==25.0
 pandas==2.2.3
 psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
